# SubWhisper

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  __init__.py  main.py  plan.txt  plan_translate.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  subtitles.srt
.cursor/rules/: generalpython.mdc  pythondev.mdc
.github/workflows/: build.yml  ci.yml
docs/: api.md  development.md  usage.md
examples/: batch_processing.py  programmatic_usage.py  progress_example.py
src/audio/: __init__.py  processing.py  speech.py
src/language/: __init__.py  detection.py  translation.py
src/subtitles/: __init__.py  formatter.py  generator.py  sync.py
src/utils/: __init__.py  cache.py  config.py  config_file.py  env.py  errors.py  logger.py  model_manager.py  progress.py
src/video/: __init__.py  extraction.py  input.py
tests/: __init__.py  conftest.py  test_audio.py  test_language.py  test_subtitles.py  test_translation.py  test_video.py
