[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subwhisper"
version = "0.1.0"
description = "Audio extraction and automatic subtitle generation from video files"
readme = "README.md"
authors = [
    {name = "Sagar Awale", email = "awalessagar@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "librosa>=0.8.1",
    "moviepy>=1.0.3",
    "torch>=1.10.0",
    "torchaudio>=0.10.0",
    "transformers>=4.12.0",
    "whisper>=1.0.0",
    "langid>=1.1.6",
    "gensim>=4.0.0",  # Uses its implementation of FastText
    "pysrt>=1.1.2",
    "webvtt-py>=0.4.6",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "loguru>=0.5.3",
    "python-dotenv>=0.19.0",
    "requests>=2.27.0",
    "toml>=0.10.2",
    "PyYAML>=5.4.1",
]

[project.urls]
homepage = "https://github.com/AwaleSagar/SubWhisper"
repository = "https://github.com/AwaleSagar/SubWhisper"

[project.scripts]
subwhisper = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"] 